turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value Couleur
    case Couleur.BLACK =>setCouleurSol(Color.WHITE); right(); avance();
         ^LangtonsAnt:3: error: not found: value Couleur
    case Couleur.WHITE =>setCouleurSol(Color.BLACK); left(); avance();
         ^