turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  getCouleurSol() match{
    case Couleur.BLACK =>setCouleurSol(Color.WHITE); right(); avance();
    case Couleur.WHITE =>setCouleurSol(Color.BLACK); left(); avance();
  }
}

def setCouleurSol(couleur:Color){
  setCouleurBrosse(couleur); baisseBrosse; leveBrosse;
}